# ECE-1724-Performant-Software-Systems-with-Rust

./: Cargo.toml  README.MD  README.md  run_tests.sh
a2-marking-tests/: input-command.txt
a2-marking-tests/correct-outputs/: 1-output.txt  2-output.txt  4-output.txt  5-output.txt  6-output.txt  7-output.txt  9-output.txt
src/: main.rs
tests/: test_game.sh
